Fixed overflowing content

--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -48,6 +48,10 @@
         }
     }
 
+    .nav-open {
+        overflow: hidden;
+    }
+
     .about {
 
         left: 0;
