--- a/public/stylesheets/sections.less
+++ b/public/stylesheets/sections.less
@@ -1,7 +1,10 @@
 @import "variables.less";
 
 .active-section {
+    height: 100% !important;
+
     z-index: 9 !important;
+    overflow-y: auto !important;
 }
 
 .gradient {
@@ -50,9 +53,11 @@
     top: 0;
 
     width: 100%;
+    height: 0;
 
     z-index: -15;
     opacity: 0;
+    overflow: hidden;
 
     header {
         padding: 5%;
